--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,15 @@
 server.port=8085
 spring.application.name=Feedback
 
-spring.profiles.active=dev
-
+#spring.profiles.active=dev
+spring.datasource.platform=postgres
+spring.datasource.url= jdbc:postgresql://10.8.101.197:5432/feedbackdb
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=org.postgresql.Driver
+logging.level.org.springframework=INFO
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
 	
